external policies read from now on
svn path=/trunk/; revision=217